Use f.toURI().toURL() to resolve file path